recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:6: error: not found: value spirale
    spirale(steps-1, angle, length + increment, increment)
    ^