recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  if (steps == 0) {
    gauche(angle); avance(length)
  }
  else {
    spirale(steps-1, angle, length + increment, increment)
  }
}
